# AIOps-game

2025CCF国际AIOps挑战赛-赛道二/: changes-test_1-predict.json  changes-test_1.json
2025CCF国际AIOps挑战赛-赛道二/train/0a8edc9f-91bb-349f-b569-1bd756411a88/: EP.csv  KPI.csv
AIOps/: analysis.py
AIOps/2025CCF国际AIOps挑战赛-赛道二/: changes-test_1-predict.json  changes-test_1.json
AIOps/2025CCF国际AIOps挑战赛-赛道二/train/0a8edc9f-91bb-349f-b569-1bd756411a88/: KPI.csv
AIOps/aiops-challenge-2025/: README.md  naive_baseline.py  pyproject.toml
AIOps/aiops-challenge-2025/aiops_challenge_2025/: data.py
AIOps/aiops-challenge-2025/aiops_challenge_2025/config/: EP.yaml  KPI.yaml  MR.yaml  NRM.yaml  PMRelation.yaml  __init__.py
AIOps/aiops-challenge-2025/aiops_challenge_2025/experiment/: __init__.py  __main__.py
AIOps/aiops-challenge-2025/aiops_challenge_2025/sample/: cells.csv  changes.json
AIOps/aiops-challenge-2025/aiops_challenge_2025/sample/cell-1/: KPI.csv  MR.csv  NRM.csv
AIOps/aiops-challenge-2025/aiops_challenge_2025/sample/cell-2/: KPI.csv  MR.csv  NRM.csv
